# aw_lidar_centerpoint

./: .gitignore  CMakeLists.txt  Dockerfile  centerpoint.repos
.devcontainer/: devcontainer.json
config/: centerpoint.param.yaml  centerpoint_tiny.param.yaml  pointcloud.yaml
include/lidar_centerpoint/: centerpoint_trt.hpp  detection_class_remapper.hpp  utils.hpp
include/lidar_centerpoint/preprocess/: pointcloud_densification.hpp  voxel_generator.hpp
launch/: lidar_centerpoint.launch.xml
lib/: centerpoint_trt.cpp  utils.cpp
lib/network/: network_trt.cpp  tensorrt_wrapper.cpp
lib/preprocess/: pointcloud_densification.cpp  voxel_generator.cpp
src/: main.cpp  node.cpp
